@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -34,11 +34,14 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicBoolean;
 
+import org.apache.commons.collections.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.hive.common.StatsSetupConst;
 import org.apache.hadoop.hive.ql.CompilationOpContext;
 import org.apache.hadoop.hive.ql.ErrorMsg;
 import org.apache.hadoop.hive.ql.exec.mr.ExecMapperContext;
+import org.apache.hadoop.hive.ql.exec.vector.VectorizedRowBatch;
 import org.apache.hadoop.hive.ql.lib.Node;
 import org.apache.hadoop.hive.ql.metadata.HiveException;
 import org.apache.hadoop.hive.ql.parse.SemanticException;
@@ -70,8 +73,9 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
 
   private static final long serialVersionUID = 1L;
 
-  public static final String HIVECOUNTERCREATEDFILES = "CREATED_FILES";
-  public static final String HIVECOUNTERFATAL = "FATAL_ERROR";
+  public static final String HIVE_COUNTER_CREATED_FILES = "CREATED_FILES";
+  public static final String HIVE_COUNTER_CREATED_DYNAMIC_PARTITIONS = "CREATED_DYNAMIC_PARTITIONS";
+  public static final String HIVE_COUNTER_FATAL = "FATAL_ERROR";
   public static final String CONTEXT_NAME_KEY = "__hive.context.name";
 
   private transient Configuration configuration;
@@ -82,11 +86,13 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   protected final AtomicBoolean abortOp;
   private transient ExecMapperContext execContext;
   private transient boolean rootInitializeCalled = false;
-  protected transient long runTimeNumRows;
-  protected int indexForTezUnion = -1;
+  protected transient long numRows = 0;
+  protected transient long runTimeNumRows = 0;
   private transient Configuration hconf;
   protected final transient Collection<Future<?>> asyncInitOperations = new HashSet<>();
+  private String marker;
 
+  protected int bucketingVersion = -1;
   // It can be optimized later so that an operator operator (init/close) is performed
   // only after that operation has been performed on all the parents. This will require
   // initializing the whole tree in all the mappers (which might be required for mappers
@@ -106,9 +112,21 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     // one of its parent is not in state CLOSE..
   }
 
+  /**
+   * Counters.
+   */
+  public enum Counter {
+    RECORDS_OUT_OPERATOR,
+    RECORDS_OUT_INTERMEDIATE
+  }
+
   protected transient State state = State.UNINIT;
 
   private boolean useBucketizedHiveInputFormat;
+
+  // Data structures specific for vectorized operators.
+  private transient boolean multiChildren;
+  private transient int[] selected;
 
   // dummy operator (for not increasing seqId)
   protected Operator(String name, CompilationOpContext cContext) {
@@ -118,6 +136,7 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     initOperatorId();
   }
 
+  /** Kryo ctor. */
   protected Operator() {
     childOperators = new ArrayList<Operator<? extends OperatorDesc>>();
     parentOperators = new ArrayList<Operator<? extends OperatorDesc>>();
@@ -139,6 +158,7 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   public Configuration getConfiguration() {
     return configuration;
   }
+
   public List<Operator<? extends OperatorDesc>> getChildOperators() {
     return childOperators;
   }
@@ -151,18 +171,9 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
    * Implements the getChildren function for the Node Interface.
    */
   @Override
-  public ArrayList<Node> getChildren() {
-
-    if (getChildOperators() == null) {
-      return null;
-    }
-
-    ArrayList<Node> ret_vec = new ArrayList<Node>();
-    for (Operator<? extends OperatorDesc> op : getChildOperators()) {
-      ret_vec.add(op);
-    }
-
-    return ret_vec;
+  public List<Node> getChildren() {
+    List<Operator<? extends OperatorDesc>> childOps = getChildOperators();
+    return (childOps == null) ? null : new ArrayList<>(childOps);
   }
 
   public void setParentOperators(
@@ -218,10 +229,6 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   @SuppressWarnings("rawtypes")
   protected transient OutputCollector out;
   protected transient final Logger LOG = LoggerFactory.getLogger(getClass().getName());
-  protected transient final Logger PLOG = LoggerFactory.getLogger(Operator.class.getName()); // for simple disabling logs from all operators
-  protected transient final boolean isLogInfoEnabled = LOG.isInfoEnabled() && PLOG.isInfoEnabled();
-  protected transient final boolean isLogDebugEnabled = LOG.isDebugEnabled() && PLOG.isDebugEnabled();
-  protected transient final boolean isLogTraceEnabled = LOG.isTraceEnabled() && PLOG.isTraceEnabled();
   protected transient String alias;
   protected transient Reporter reporter;
   protected String id;
@@ -230,17 +237,6 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   protected transient ObjectInspector[] inputObjInspectors = new ObjectInspector[1];
   // for output rows of this operator
   protected transient ObjectInspector outputObjInspector;
-
-  /**
-   * A map of output column name to input expression map. This is used by
-   * optimizer and built during semantic analysis contains only key elements for
-   * reduce sink and group by op
-   */
-  protected Map<String, ExprNodeDesc> colExprMap;
-
-  public void setId(String id) {
-    this.id = id;
-  }
 
   /**
    * This function is not named getId(), to make sure java serialization does
@@ -296,11 +292,7 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
    */
   protected boolean areAllParentsInitialized() {
     for (Operator<? extends OperatorDesc> parent : parentOperators) {
-      if (parent == null) {
-        //return true;
-        continue;
-      }
-      if (parent.state != State.INIT) {
+      if (parent != null && parent.state != State.INIT) {
         return false;
       }
     }
@@ -320,7 +312,11 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   @SuppressWarnings("unchecked")
   public final void initialize(Configuration hconf, ObjectInspector[] inputOIs)
       throws HiveException {
+
     this.done = false;
+    this.runTimeNumRows = 0; // initializeOp can be overridden
+    // Initializing data structures for vectorForward
+    this.selected = new int[VectorizedRowBatch.DEFAULT_SIZE];
     if (state == State.INIT) {
       return;
     }
@@ -330,20 +326,18 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
       return;
     }
 
-    if (isLogInfoEnabled) {
-      LOG.info("Initializing operator " + this);
-    }
+    LOG.info("Initializing Operator: {}", this);
 
     if (inputOIs != null) {
       inputObjInspectors = inputOIs;
     }
 
-    // initialize structure to maintain child op info. operator tree changes
     // while initializing so this need to be done here instead of constructor
     childOperatorsArray = new Operator[childOperators.size()];
     for (int i = 0; i < childOperatorsArray.length; i++) {
       childOperatorsArray[i] = childOperators.get(i);
     }
+    multiChildren = childOperatorsArray.length > 1;
     childOperatorsTag = new int[childOperatorsArray.length];
     for (int i = 0; i < childOperatorsArray.length; i++) {
       List<Operator<? extends OperatorDesc>> parentOperators =
@@ -369,22 +363,20 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
           || childOperatorsArray.length != childOperators.size()) {
         throw new AssertionError("Internal error during operator initialization");
       }
-      if (isLogDebugEnabled) {
-        LOG.debug("Initialization Done " + id + " " + getName());
-      }
+
+      LOG.debug("Initialization Done: {}", this);
 
       initializeChildren(hconf);
       isInitOk = true;
     } finally {
-      // TODO: ugly hack because Java doesn't have dtors and Tez input hangs on shutdown.
+      // TODO: ugly hack because Java does not have dtors and Tez input
+      // hangs on shutdown.
       if (!isInitOk) {
         cancelAsyncInitOps();
       }
     }
 
-    if (isLogDebugEnabled) {
-      LOG.debug("Initialization Done " + id + " " + getName() + " done is reset.");
-    }
+    LOG.debug("Initialization Done - Reset: {}", this);
 
     // let's wait on the async ops before continuing
     completeInitialization(asyncInitOperations);
@@ -444,7 +436,6 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
             }
           }
         }
-
       }
     }
 
@@ -455,7 +446,6 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
       }
       throw new HiveException("Async Initialization failed. abortRequested=" + abortOp.get(), asyncEx);
     }
-
 
     completeInitializationOp(os);
   }
@@ -472,9 +462,8 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   }
 
   public void initializeLocalWork(Configuration hconf) throws HiveException {
-    if (childOperators != null) {
-      for (int i =0; i<childOperators.size();i++) {
-        Operator<? extends OperatorDesc> childOp = this.childOperators.get(i);
+    if (CollectionUtils.isNotEmpty(childOperators)) {
+      for (Operator<? extends OperatorDesc> childOp : childOperators) {
         childOp.initializeLocalWork(hconf);
       }
     }
@@ -486,7 +475,14 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   protected void initializeOp(Configuration hconf) throws HiveException {
     this.hconf = hconf;
     rootInitializeCalled = true;
-    runTimeNumRows = 0;
+  }
+
+  public String getCounterName(Counter counter, Configuration hconf) {
+    String context = hconf.get(Operator.CONTEXT_NAME_KEY, "");
+    if (StringUtils.isNotEmpty(context)) {
+      context = "_" + context.replace(" ", "_");
+    }
+    return counter + context;
   }
 
   /**
@@ -495,15 +491,14 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
    */
   protected void initializeChildren(Configuration hconf) throws HiveException {
     state = State.INIT;
-    if (isLogDebugEnabled) {
-      LOG.debug("Operator " + id + " " + getName() + " initialized");
-    }
-    if (childOperators == null || childOperators.isEmpty()) {
+    LOG.debug("Operator Initialized: {}", this);
+
+    if (CollectionUtils.isEmpty(childOperators)) {
       return;
     }
-    if (isLogDebugEnabled) {
-      LOG.debug("Initializing children of " + id + " " + getName());
-    }
+
+    LOG.debug("Initializing Children: {}", this);
+
     for (int i = 0; i < childOperatorsArray.length; i++) {
       childOperatorsArray[i].initialize(hconf, outputObjInspector, childOperatorsTag[i]);
       if (reporter != null) {
@@ -513,7 +508,7 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   }
 
   public void abort() {
-    LOG.info("Received abort in operator: {}", getName());
+    LOG.info("Received Abort in Operator: {}", this);
     abortOp.set(true);
   }
 
@@ -522,8 +517,8 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
    */
   public void passExecContext(ExecMapperContext execContext) {
     this.setExecContext(execContext);
-    for (int i = 0; i < childOperators.size(); i++) {
-        childOperators.get(i).passExecContext(execContext);
+    for (Operator<? extends OperatorDesc> childOp : childOperators) {
+      childOp.passExecContext(execContext);
     }
   }
 
@@ -540,14 +535,12 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
    */
   protected void initialize(Configuration hconf, ObjectInspector inputOI,
       int parentId) throws HiveException {
-    if (isLogDebugEnabled) {
-      LOG.debug("Initializing child " + id + " " + getName());
-    }
-    // Double the size of the array if needed
+    LOG.debug("Initializing Child : {}", this);
     if (parentId >= inputObjInspectors.length) {
-      int newLength = inputObjInspectors.length * 2;
+      // Determine the next power of 2 larger than the requested index
+      int newLength = 2;
       while (parentId >= newLength) {
-        newLength *= 2;
+        newLength <<= 1;
       }
       inputObjInspectors = Arrays.copyOf(inputObjInspectors, newLength);
     }
@@ -581,45 +574,33 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   public abstract void process(Object row, int tag) throws HiveException;
 
   protected final void defaultStartGroup() throws HiveException {
-    if (isLogDebugEnabled) {
-      LOG.debug("Starting group");
-    }
+    LOG.debug("Starting group");
 
-    if (childOperators == null) {
+    if (CollectionUtils.isEmpty(childOperators))  {
+      LOG.trace("No children operators; start group done");
       return;
     }
 
-    if (isLogDebugEnabled) {
-      LOG.debug("Starting group for children:");
-    }
+    LOG.trace("Starting group for children");
     for (Operator<? extends OperatorDesc> op : childOperators) {
       op.startGroup();
     }
-
-    if (isLogDebugEnabled) {
-      LOG.debug("Start group Done");
-    }
+    LOG.trace("Start group done");
   }
 
   protected final void defaultEndGroup() throws HiveException {
-    if (isLogDebugEnabled) {
-      LOG.debug("Ending group");
-    }
+    LOG.debug("Ending group");
 
-    if (childOperators == null) {
+    if (CollectionUtils.isEmpty(childOperators)) {
+      LOG.trace("No children operators; end group done");
       return;
     }
 
-    if (isLogDebugEnabled) {
-      LOG.debug("Ending group for children:");
-    }
+    LOG.trace("Ending group for children");
     for (Operator<? extends OperatorDesc> op : childOperators) {
       op.endGroup();
     }
-
-    if (isLogDebugEnabled) {
-      LOG.debug("End group Done");
-    }
+    LOG.trace("End group done");
   }
 
   // If a operator wants to do some work at the beginning of a group
@@ -632,29 +613,44 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     defaultEndGroup();
   }
 
+  // Tell the operator the status of the next key-grouped VectorizedRowBatch that will be delivered
+  // to the process method.  E.g. by reduce-shuffle.  These semantics are needed by PTF so it can
+  // efficiently add computed values to the last batch of a group key.
+  public void setNextVectorBatchGroupStatus(boolean isLastGroupBatch) throws HiveException {
+    // Do nothing.
+  }
+
   // an blocking operator (e.g. GroupByOperator and JoinOperator) can
   // override this method to forward its outputs
   public void flush() throws HiveException {
   }
 
-  public void processGroup(int tag) throws HiveException {
-    if (childOperators == null || childOperators.isEmpty()) {
-      return;
+  // Recursive flush to flush all the tree operators
+  public void flushRecursive() throws HiveException {
+    flush();
+    if (CollectionUtils.isNotEmpty(childOperators)) {
+      for (Operator<?> child : childOperators) {
+        child.flushRecursive();
+      }
     }
-    for (int i = 0; i < childOperatorsArray.length; i++) {
-      childOperatorsArray[i].processGroup(childOperatorsTag[i]);
+  }
+
+  public void processGroup(int tag) throws HiveException {
+    if (CollectionUtils.isNotEmpty(childOperators)) {
+      for (int i = 0; i < childOperatorsArray.length; i++) {
+        childOperatorsArray[i].processGroup(childOperatorsTag[i]);
+      }
     }
   }
 
   protected boolean allInitializedParentsAreClosed() {
     if (parentOperators != null) {
       for (Operator<? extends OperatorDesc> parent : parentOperators) {
-        if(parent==null){
+        if (parent == null) {
           continue;
         }
-	if (isLogDebugEnabled) {
-	  LOG.debug("allInitializedParentsAreClosed? parent.state = " + parent.state);
-	}
+        LOG.debug("allInitializedParentsAreClosed? parent.state = {}",
+            parent.state);
         if (!(parent.state == State.CLOSE || parent.state == State.UNINIT)) {
           return false;
         }
@@ -667,9 +663,7 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   // since it is called by its parents' main thread, so no
   // more than 1 thread should call this close() function.
   public void close(boolean abort) throws HiveException {
-    if (isLogDebugEnabled) {
-      LOG.debug("close called for operator " + this);
-    }
+    LOG.debug("Close Called for Operator: {}", this);
 
     if (state == State.CLOSE) {
       return;
@@ -677,24 +671,29 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
 
     // check if all parents are finished
     if (!allInitializedParentsAreClosed()) {
-      if (isLogDebugEnabled) {
-        LOG.debug("Not all parent operators are closed. Not closing.");
-      }
+      LOG.debug("Not all parent operators are closed. Not closing.");
       return;
     }
 
     // set state as CLOSE as long as all parents are closed
     // state == CLOSE doesn't mean all children are also in state CLOSE
     state = State.CLOSE;
-    if (isLogInfoEnabled) {
-      LOG.info("Closing operator " + this);
-    }
+    LOG.info("Closing Operator: {}", this);
 
     abort |= abortOp.get();
 
-
     // call the operator specific close routine
     closeOp(abort);
+
+    // closeOp can be overriden
+    if (conf != null && conf.getRuntimeStatsTmpDir() != null) {
+      publishRunTimeStats();
+    }
+    LongWritable runTimeRowsWritable = new LongWritable(runTimeNumRows);
+    LongWritable recordCounter = new LongWritable(numRows);
+    statsMap.put(Counter.RECORDS_OUT_OPERATOR.name() + "_" + getOperatorId(), runTimeRowsWritable);
+    statsMap.put(getCounterName(Counter.RECORDS_OUT_INTERMEDIATE, hconf), recordCounter);
+    this.runTimeNumRows = 0;
 
     reporter = null;
 
@@ -705,17 +704,13 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
       }
 
       for (Operator<? extends OperatorDesc> op : childOperators) {
-        if (isLogDebugEnabled) {
-          LOG.debug("Closing child = " + op);
-        }
+        LOG.debug("Closing Child: {} ", op);
         op.close(abort);
       }
 
-      if (isLogDebugEnabled) {
-        LOG.debug(id + " Close done");
-      }
+      LOG.debug("Close Done: {}", this);
     } catch (HiveException e) {
-      LOG.warn("Caught exception while closing operator: " + e.getMessage(), e);
+      LOG.warn("Caught exception while closing operator", e);
       throw e;
     }
   }
@@ -725,10 +720,6 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
    * should overwrite this funtion for their specific cleanup routine.
    */
   protected void closeOp(boolean abort) throws HiveException {
-    if (conf != null && conf.getRuntimeStatsTmpDir() != null) {
-      publishRunTimeStats();
-    }
-    runTimeNumRows = 0;
   }
 
   private boolean jobCloseDone = false;
@@ -757,8 +748,8 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     jobCloseOp(conf, success);
     jobCloseDone = true;
 
-    if (childOperators != null) {
-      for (Operator<? extends OperatorDesc> op : childOperators) {
+    if (CollectionUtils.isNotEmpty(this.childOperators)) {
+      for (Operator<? extends OperatorDesc> op : this.childOperators) {
         op.jobClose(conf, success);
       }
     }
@@ -904,20 +895,59 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     }
   }
 
-  public void resetStats() {
-    for (String e : statsMap.keySet()) {
-      statsMap.get(e).set(0L);
+  /*
+   * Forward a VectorizedRowBatch to the children operators.
+   */
+  protected void vectorForward(VectorizedRowBatch batch)
+      throws HiveException {
+
+    if (getDone()) {
+      return;
+    }
+
+    // Data structures to store original values
+    final int size = batch.size;
+    runTimeNumRows += size;
+    final boolean selectedInUse = batch.selectedInUse;
+    final boolean saveState = (selectedInUse && multiChildren);
+    if (saveState) {
+      System.arraycopy(batch.selected, 0, selected, 0, size);
+    }
+
+    final int childSize = childOperatorsArray.length;
+    if (childSize == 1) {
+      childOperatorsArray[0].process(batch, childOperatorsTag[0]);
+    } else {
+      int childrenDone = 0;
+      for (int i = 0; i < childOperatorsArray.length; i++) {
+        Operator<? extends OperatorDesc> o = childOperatorsArray[i];
+        if (o.getDone()) {
+          childrenDone++;
+        } else {
+          o.process(batch, childOperatorsTag[i]);
+
+          // Restore original values
+          batch.size = size;
+          batch.selectedInUse = selectedInUse;
+          if (saveState) {
+            System.arraycopy(selected, 0, batch.selected, 0, size);
+          }
+        }
+      }
+      // if all children are done, this operator is also done
+      if (childrenDone != 0 && childrenDone == childOperatorsArray.length) {
+        setDone(true);
+      }
     }
   }
 
   public void reset(){
-    this.state=State.INIT;
+    this.state = State.INIT;
     if (childOperators != null) {
       for (Operator<? extends OperatorDesc> o : childOperators) {
         o.reset();
       }
     }
-
   }
 
   /**
@@ -938,7 +968,7 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   }
 
   public void logStats() {
-    if (isLogInfoEnabled && !statsMap.isEmpty()) {
+    if (LOG.isInfoEnabled() && !statsMap.isEmpty()) {
       StringBuilder sb = new StringBuilder();
       for (Map.Entry<String, LongWritable> e : statsMap.entrySet()) {
         sb.append(e.getKey()).append(":").append(e.getValue()).append(", ");
@@ -961,11 +991,16 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
    * @return null if the operator doesn't change columns
    */
   public Map<String, ExprNodeDesc> getColumnExprMap() {
-    return colExprMap;
+    if (this.getConf() == null) {
+      return null;
+    }
+    return this.getConf().getColumnExprMap();
   }
 
   public void setColumnExprMap(Map<String, ExprNodeDesc> colExprMap) {
-    this.colExprMap = colExprMap;
+    if (this.getConf() != null) {
+      this.getConf().setColumnExprMap(colExprMap);
+    }
   }
 
   private String getLevelString(int level) {
@@ -986,10 +1021,11 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   }
 
   public String dump(int level, HashSet<Integer> seenOpts) {
-    if (seenOpts.contains(new Integer(id))) {
+    Integer idObj = Integer.valueOf(id);
+    if (seenOpts.contains(idObj)) {
       return null;
     }
-    seenOpts.add(new Integer(id));
+    seenOpts.add(idObj);
 
     StringBuilder s = new StringBuilder();
     String ls = getLevelString(level);
@@ -1068,12 +1104,16 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     return operatorId;
   }
 
-  public void initOperatorId() {
-    setOperatorId(getName() + "_" + this.id);
+  public String getMarker() {
+    return marker;
   }
 
-  public void setOperatorId(String operatorId) {
-    this.operatorId = operatorId;
+  public void setMarker(String marker) {
+    this.marker = marker;
+  }
+
+  public void initOperatorId() {
+    this.operatorId = getName() + '_' + this.id;
   }
 
   /*
@@ -1122,9 +1162,8 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   // for each input file
   public void cleanUpInputFileChanged() throws HiveException {
     this.cleanUpInputFileChangedOp();
-    if(this.childOperators != null) {
-      for (int i = 0; i<this.childOperators.size();i++) {
-        Operator<? extends OperatorDesc> op = this.childOperators.get(i);
+    if (CollectionUtils.isNotEmpty(this.childOperators)) {
+      for (Operator<? extends OperatorDesc> op : this.childOperators) {
         op.cleanUpInputFileChanged();
       }
     }
@@ -1167,8 +1206,16 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     @SuppressWarnings("unchecked")
     T descClone = (T)conf.clone();
     // also clone the colExprMap by default
+    // we need a deep copy
+    ArrayList<ColumnInfo> colInfos =
+        new ArrayList<>(getSchema().getSignature());
+    Map<String, ExprNodeDesc> map = null;
+    Map<String, ExprNodeDesc> colExprMap = getColumnExprMap();
+    if (colExprMap != null) {
+      map = new HashMap<>(colExprMap);
+    }
     Operator<? extends OperatorDesc> ret = OperatorFactory.getAndMakeChild(
-            cContext, descClone, getSchema(), getColumnExprMap(), parentClones);
+            cContext, descClone, new RowSchema(colInfos), map, parentClones);
 
     return ret;
   }
@@ -1305,7 +1352,7 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
 
   @Override
   public String toString() {
-    return getName() + "[" + getIdentifier() + "]";
+    return getName() + '[' + getIdentifier() + ']';
   }
 
   public static String toString(Collection<TableScanOperator> top) {
@@ -1348,40 +1395,28 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   }
 
   public Statistics getStatistics() {
-    if (conf != null) {
-      return conf.getStatistics();
-    }
-
-    return null;
+    return (conf == null) ? null : conf.getStatistics();
   }
 
   public OpTraits getOpTraits() {
-    if (conf != null) {
-      return conf.getTraits();
-    }
-
-    return null;
+    return (conf == null) ? null : conf.getTraits();
   }
 
   public void setOpTraits(OpTraits metaInfo) {
-    if (isLogDebugEnabled) {
-      LOG.debug("Setting traits (" + metaInfo + ") on " + this);
-    }
+    LOG.debug("Setting traits ({}) on: {}", metaInfo, this);
     if (conf != null) {
       conf.setTraits(metaInfo);
     } else {
-      LOG.warn("Cannot set traits when there's no descriptor: " + this);
+      LOG.warn("Cannot set traits when there is no descriptor: {}", this);
     }
   }
 
   public void setStatistics(Statistics stats) {
-    if (isLogDebugEnabled) {
-      LOG.debug("Setting stats (" + stats + ") on " + this);
-    }
+    LOG.debug("Setting stats ({}) on: {}", stats, this);
     if (conf != null) {
       conf.setStatistics(stats);
     } else {
-      LOG.warn("Cannot set stats when there's no descriptor: " + this);
+      LOG.warn("Cannot set stats when there is no descriptor: {}", this);
     }
   }
 
@@ -1432,7 +1467,12 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   }
 
   public void setCompilationOpContext(CompilationOpContext ctx) {
+    if (cContext == ctx) {
+      return;
+    }
     cContext = ctx;
+    id = String.valueOf(ctx.nextOperatorId());
+    initOperatorId();
   }
 
   /** @return Compilation operator context. Only available during compilation. */
@@ -1443,8 +1483,8 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   private void publishRunTimeStats() throws HiveException {
     StatsPublisher statsPublisher = new FSStatsPublisher();
     StatsCollectionContext sContext = new StatsCollectionContext(hconf);
-    sContext.setIndexForTezUnion(indexForTezUnion);
     sContext.setStatsTmpDir(conf.getRuntimeStatsTmpDir());
+    sContext.setContextSuffix(getOperatorId());
 
     if (!statsPublisher.connect(sContext)) {
       LOG.error("StatsPublishing error: cannot connect to database");
@@ -1466,11 +1506,44 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
     }
   }
 
-  public int getIndexForTezUnion() {
-    return indexForTezUnion;
+  /**
+   * Decides whether two operators are logically the same.
+   * This can be used to merge same operators and avoid repeated computation.
+   */
+  public boolean logicalEquals(Operator other) {
+    return getClass().getName().equals(other.getClass().getName()) &&
+        (conf == other.getConf() || (conf != null && other.getConf() != null &&
+            conf.isSame(other.getConf())));
   }
 
-  public void setIndexForTezUnion(int indexForTezUnion) {
-    this.indexForTezUnion = indexForTezUnion;
+  /**
+   * Compares the whole operator tree with the other.
+   */
+  // Currently only used during re-optimization related parts.
+  // FIXME: HIVE-18703 should probably move this method somewhere else
+  public final boolean logicalEqualsTree(Operator<?> o) {
+    // XXX: this could easily become a hot-spot
+    if (!logicalEquals(o)) {
+      return false;
+    }
+    if (o.getNumParent() != getNumParent()) {
+      return false;
+    }
+    for (int i = 0; i < getNumParent(); i++) {
+      Operator<? extends OperatorDesc> copL = parentOperators.get(i);
+      Operator<? extends OperatorDesc> copR = o.parentOperators.get(i);
+      if (!copL.logicalEquals(copR)) {
+        return false;
+      }
+    }
+    return true;
+  }
+
+  public void setBucketingVersion(int bucketingVersion) {
+    this.bucketingVersion = bucketingVersion;
+  }
+
+  public int getBucketingVersion() {
+    return bucketingVersion;
   }
 }
